css/custom.css
/* ... */
#hero ul,
.features ul,
footer ul,
nav ul {
    list-style: none;
    margin: 0;
    padding: 0
}

.features ul li,
nav.main ul li {
    float: left
}

nav.main ul li {
    margin: 0 0 0 55px
}

nav.main ul {
    position: absolute;
    top: 9px;
    right: 0
}

nav a {
    color: #7f7f7f;
    font-size: 1.3em;
    line-height: 3rem
}

h1 a:hover,
nav.main ul li a:hover {
    color: #000
}

#hero {
    display: block;
    height: 310px;
    margin: 80px 0 120px;
    background: url(../img/hero-devices.png) right 50% no-repeat;
    background-size: contain
}

#default-theme,
.features ul li a.bincdn,
.features ul li a.callmeprivate,
.features ul li a.ghbubble,
.features ul li a.htmlposts,
.features ul li a.mypost,
.features ul li a.scamshare,
.features ul li a.textprivately,
.features ul li a.wpbubble,
.features ul li a.notetotext,
.features ul li a.notetoemail,
.features ul li a.notetovoice,
.features ul li a.baremetalhost,
.features ul li a.edithours, 
.features ul li a.writetufte,
.features ul li a.ectochat,
.features ul li a.notetocall,
.features ul li a.youtrippy,
.features ul li a.retiretheory,
.features ul li a.justcounts,
.features ul li a.invodue,
.features ul li a.bunnyapi,
.features ul li a.dreamapi,
.features ul li a.pixle,
.features ul li a.wordpress,
.features ul li a.rewindwp,
.features ul li a.pidata
{
    background-color: #f9f9f9;
    outline: #eee solid 1px
}

#hero ul li,
#hero ul li a {
    display: block;
    height: 310px;
    text-align: center
}

#hero ul li {
    float: left
}

#hero ul li#desktop-preview {
    width: 56%
}

#hero ul li#mobile-preview {
    width: 44%
}

#hero ul li a {
    width: 100%
}

#hero ul li .popover {
    top: -20px;
    opacity: 0;
    -moz-transition-property: opacity, top;
    -moz-transition-duration: .14s;
    -moz-transition-timing-function: ease-out;
    -webkit-transition-property: opacity, top;
    -webkit-transition-duration: .14s;
    -webkit-transition-timing-function: ease-out
}

#hero ul li:hover .popover {
    top: -34px;
    opacity: 1
}

.features ul li {
    width: 50%;
    display: block;
    padding-bottom: 50px
}

.features ul li a.bincdn,
.features ul li a.callmeprivate,
.features ul li a.ghbubble,
.features ul li a.htmlposts,
.features ul li a.mypost,
.features ul li a.scamshare,
.features ul li a.textprivately,
.features ul li a.wpbubble,
.features ul li a.notetoemail,
.features ul li a.notetotext,
.features ul li a.notetovoice,
.features ul li a.baremetalhost,
.features ul li a.edithours, 
.features ul li a.writetufte,
.features ul li a.ectochat,
.features ul li a.notetocall,
.features ul li a.youtrippy,
.features ul li a.retiretheory,
.features ul li a.justcounts,
.features ul li a.invodue,
.features ul li a.bunnyapi,
.features ul li a.dreamapi,
.features ul li a.pixle,
.features ul li a.wordpress,
.features ul li a.rewindwp,
.features ul li a.pidata
{
    width: 120px;
    height: 120px;
    margin: 0 30px 30px 0;
    background-size: cover;
    float: left;
    background-repeat: no-repeat;
    display: block;
    text-align: left
}

.features ul li p {
    padding: 0 55px 0 0
}

.features ul li#callmeprivate a.callmeprivate {
    background-image: url(../img/callmeprivate.png)
}

.features ul li#textprivately a.textprivately {
    background-image: url(../img/textprivately.png)
}

.features ul li#wpbubble a.wpbubble {
    background-image: url(../img/wpbubble.png)
}

.features ul li#mypost a.mypost {
    background-image: url(../img/mypost.png)
}

.features ul li#bincdn a.bincdn {
    background-image: url(../img/bincdn.png)
}

.features ul li#scamshare a.scamshare {
    background-image: url(../img/scamshare.png)
}

.features ul li#htmlposts a.htmlposts {
    background-image: url(../img/html5.png)
}

.features ul li#ectochat a.ectochat {
    background-image: url(../img/ectosym.png)
}

.features ul li#ghbubble a.ghbubble {
    background-image: url(../img/coming-soon.jpg)
}

.features ul li#justcounts a.justcounts {
    background-image: url(../img/justcounts.png)
}

.features ul li#bunnyapi a.bunnyapi {
    background-image: url(../img/bunnyapi_logo.jpg)
}

.features ul li#dreamapi a.dreamapi {
    background-image: url(../img/dreamapi.jpg)
}

.features ul li#notetoemail a.notetoemail {
    background-image: url(../img/notetoemail.png)
}

.features ul li#notetotext a.notetotext {
    background-image: url(../img/notetotext.png)
}

.features ul li#notetovoice a.notetovoice {
    background-image: url(../img/notetovoice.png)
}

.features ul li#baremetalhost a.baremetalhost {
    background-image: url(../img/baremetalhost.png);
    width: 28%;
}

.features ul li#edithours a.edithours {
    background-image: url(../img/edithours.png);
}

.features ul li#pixle a.pixle {
    background-image: url(../img/pixle.png);
}

.features ul li#writetufte a.writetufte {
    background-image: url(../img/tufte.png)
}

.features ul li#notetocall a.notetocall {
    background-image: url(../img/notetocall.png)
}

.features ul li#youtrippy a.youtrippy {
    background-image: url(../img/prism.png)
}

.features ul li#retiretheory a.retiretheory {
    background-image: url(../img/retiretheory.png)
}

.features ul li#invodue a.invodue {
    background-image: url(../img/invodue.png)
}


.features ul li#wordpress a.wordpress {
    background-image: url(../img/wordpress.jpg)
}

.features ul li#rewindwp a.rewindwp {
    background-image: url(../img/rewindwp-logo.png)
}

.features ul li#pidata a.pidata {
    background-image: url(../img/pi-data-logo.png)
}



    #default-theme {
        clear: left;
        width: 100%;
        height: 226px;
        margin-bottom: 80px
    }
    #default-theme img {
        width: 1036px;
        height: 226px
    }
    footer.site {
        bottom: 40px;
        width: 100%;
        left: 0
    }
    footer.site ul {
        max-width: 500px;
        min-width: 320px;
        margin: 0 auto
    }
/* ... */

